# temprano-watchtower

./: .gitignore  Cargo.toml  README.md  SPECS.md
.githooks/: reference-transaction
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: .gitignore  book.toml  package-lock.json  package.json  vocs.config.ts  vocs.config.tsx
docs/docs/pages/: concepts.md  index.md  system-design.md
docs/docs/pages/api/: common-types.md  groups.md  health.md  index.md  json-rpc.md  transactions.md
docs/docs/pages/getting-started/: configuration.md  dependencies.md  index.md  installation.md
docs/src/: SUMMARY.md  index.md
docs/theme/: head.hbs
migrations/: 0001_init.sql
scripts/: backup_db.sh  install.sh
src/: api.rs  broadcaster.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  nonce_key.rs  rpc.rs  scheduler.rs  serde_helpers.rs  state.rs  tx.rs  watcher.rs
tests/: e2e.rs
