[package]
name = "tempo-watchtower"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["query"] }
bytes = "1.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
hex = "0.4"
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
sqlx = { version = "0.8", features = ["chrono", "macros", "postgres", "runtime-tokio-rustls", "uuid"] }
sqlx-pg-uint = "0.10.1"
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
toml = "0.8"

alloy = { version = "1.4.3", features = ["provider-ws", "pubsub", "k256"] }
alloy-rpc-types-eth = "1.4.3"
tempo-alloy = { git = "https://github.com/tempoxyz/tempo" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
